# python_modules_42

./: README.md
Python 00/ex1/: ft_plot_area.py
Python 00/ex2/: ft_harvest_total.py
Python 00/ex3/: ft_plant_age.py
Python 00/ex4/: ft_water_reminder.py
Python 00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python 00/ex6/: ft_garden_summary.py
Python 00/ex7/: ft_seed_inventory.py
Python 01/ex0/: ft_garden_intro.py
Python 01/ex1/: ft_garden_data.py
Python 01/ex2/: ft_plant_growth.py
Python 01/ex3/: ft_plant_factory.py
Python 01/ex4/: ft_garden_security.py
Python 01/ex5/: ft_plant_types.py
Python 01/ex6/: ft_garden_analytics.py
Python 02/ex0/: ft_first_exception.py
Python 02/ex1/: ft_different_errors.py  ft_raise_exception.py
Python 02/ex2/: ft_custom_errors.py  ft_different_errors.py
Python 02/ex3/: ft_custom_errors.py  ft_finally_block.py
Python 02/ex4/: ft_finally_block.py  ft_raise_errors.py
Python 02/ex5/: ft_garden_management.py
Python 03/ex0/: ft_command_quest.py
Python 06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  main.py
Python 07/: battle.py  capacitor.py  tournament.py
Python 08/: .gitignore
Python 08/ex1/: pyproject.toml
python_06/: ft_alembic_1.py  ft_alembic_4.py  ft_distillation_0.py  ft_transmutation_0.py
python_module_06/: ft_alembic_3.py  ft_alembic_5.py  ft_transmutation_1.py  ft_transmutation_2.py
python_module_09/: .gitignore
(+72 files in other folders)
